# principal-type

./: CHANGELOG.md  LICENSE  README.md  principal-type.cabal
app/: Main.hs
src/Language/: LambdaCalculus.hs  SimpleTypes.hs
src/Language/LambdaCalculus/: Parser.hs
src/Language/SimpleTypes/: Inference.hs  Substitution.hs
