cabal-version:      2.4
name:               principal-type
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Bjarki Baldursson Harksen
maintainer:         bjarki31@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Language.LambdaCalculus
        Language.LambdaCalculus.Parser
        Language.SimpleTypes
        Language.SimpleTypes.Inference
        Language.SimpleTypes.Substitution

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.4.1,
        mtl ^>=2.2.2,
        megaparsec ^>=9.3.0,

    hs-source-dirs:   src
    default-language: Haskell2010

executable principal-type
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskeline ^>=0.8.2,
        principal-type

    hs-source-dirs:   app
    default-language: Haskell2010
